feat: swagger 文件 - userController.js
